[package]
name = "meadowlark-core-types"
version = "0.2.0"
edition = "2018"
authors = ["Billy Messenger <BillyDM@tutamail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["audio", "daw", "plugin", "types"]
categories = ["multimedia::audio"]
description = "Core types used in the Meadowlark project"
documentation = "https://docs.rs/meadowlark-core-types"
repository = "https://github.com/MeadowlarkDAW/meadowlark-core-types"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serde-derive = ["serde"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }